--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -26,7 +26,7 @@
 					<p class='illustration-description'>
 						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
 					</p>
-					<hr class='illustration-divider'>
+					<hr class='illustration-divider divider-thicker'>
 				</div>
 		</ion-col>
 		<!-- <img src="../../assets/illustrations/Path 2577.svg" id='third-path'/> -->
@@ -49,10 +49,10 @@
 				alt="Sport Illustration"/>
 				<div class='illustration-content-container'>
 					<h3 class='illustration-subtitle'>Sport</h3>
-					<p class='illustration-description'>
+					<p class='illustration-description last'>
 						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
 					</p>
-					<hr class='illustration-divider'>
+					<hr class='illustration-divider divider-thicker'>
 				</div>
 		</ion-col>
 	</ion-row>
