--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -57,6 +57,7 @@
     --border-radius: 30px;
     cursor: pointer;
     --color: var(--ion-color-secondary);
+    margin-bottom: 40px;
     margin-top: 60px;
     --padding-bottom: 25px;
     --padding-left: 25px;
