--- a/src/app/invited-showcase/invited-showcase.component.scss
+++ b/src/app/invited-showcase/invited-showcase.component.scss
@@ -1,3 +1,47 @@
 .blob {
-    
+    position: absolute;
+    z-index: 0;
+}
+
+.first-section {
+    margin-left: 40px;
+    text-align: left;
+}
+
+.mobile-images {
+    width: 100%;
+}
+
+.blob-background {
+    background: url('../../assets/illustrations/blob-shape\ \(3\).svg');
+    background-position: right bottom;;
+    background-repeat: no-repeat;
+    background-size: 500px 500px;
+}
+
+.section-button {
+    --border-color: var(--ion-color-secondary);
+    --border-radius: 30px;
+    cursor: pointer;
+    --color: var(--ion-color-secondary);
+    margin-bottom: 70px;
+    margin-top: 60px;
+    --padding-bottom: 25px;
+    --padding-left: 25px;
+    --padding-right: 25px;
+    --padding-top: 25px;
+}
+
+.section-mobile {
+    margin: 0 auto;
+    max-width: 60%;    
+}
+
+.section-mobile-subtitle {
+    text-align: left;
+}
+
+.section-title { 
+    font-size: 35px;
+    margin-top: 42.5px;
 }
