finished guide component

--- a/src/app/invited-showcase/invited-showcase.component.html
+++ b/src/app/invited-showcase/invited-showcase.component.html
@@ -1,4 +1,4 @@
-<ion-grid>
+<ion-grid class='showcase-grid'>
 	<ion-row>
 		<ion-col class='first-section' justify-content-center size='4' *ngIf='!mobile'>
 			<h2 class='section-title'>
