--- a/src/app/invited-showcase/invited-showcase.component.scss
+++ b/src/app/invited-showcase/invited-showcase.component.scss
@@ -19,6 +19,10 @@
     background-size: 500px 500px;
 }
 
+.showcase-grid {
+    margin-bottom: 30px;
+}
+
 .section-button {
     --border-color: var(--ion-color-secondary);
     --border-radius: 30px;
@@ -45,3 +49,5 @@
     font-size: 35px;
     margin-top: 42.5px;
 }
+
+
