stole carousel component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,6 +16,7 @@
                     <app-presentation></app-presentation>
                     <app-invited-showcase></app-invited-showcase>
                     <app-guide></app-guide>
+                    <app-carousel></app-carousel>
                 </ion-col>
             </ion-row>
         </ion-grid>
