added map component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,7 @@
                     <app-invited-showcase></app-invited-showcase>
                     <app-guide></app-guide>
                     <app-carousel></app-carousel>
+                    <app-map></app-map>
                 </ion-col>
             </ion-row>
         </ion-grid>
