finished map component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,6 +18,7 @@
                     <app-guide></app-guide>
                     <app-carousel></app-carousel>
                     <app-map></app-map>
+                    <app-sponsors-showcase></app-sponsors-showcase>
                 </ion-col>
             </ion-row>
         </ion-grid>
