finished adding sponsor pics, needs styling

--- a/src/app/sponsors-showcase/sponsors-showcase.component.scss
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.scss
@@ -3,3 +3,9 @@
     margin-top: 42.5px;
     margin-bottom: 45px;
 }
+
+.sponsor-image {
+    max-width: 200px;
+    max-height: 200px;
+    margin: 30px
+}
