--- a/src/app/sponsors-showcase/sponsors-showcase.component.html
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.html
@@ -1,6 +1,6 @@
 <h2 class='section-title'>Sponsori Oficiali</h2>
 <div class='row'>
-    <div class='row'>
+    <div class='col vertical-align-content'>
         <img src='../../assets/images/Sponsors/3G-Sport.png' class='sponsor-image' alt='3G-Sport'>
         <img src='../../assets/images/Sponsors/accent.png' class='sponsor-image' alt='Accent Travel and Events'>
         <img src='../../assets/images/Sponsors/AC-symbol-pozitiv.png' class='sponsor-image' alt='Aqua Carpatica'>
@@ -11,7 +11,6 @@
         <img src='../../assets/images/Sponsors/BenQ_3D_P_CMYK_Sm-4.png' class='sponsor-image' alt='BenQ'>
         <img src='../../assets/images/Sponsors/civitas.jpg' class='sponsor-image' alt='Civitas'>
         <img src='../../assets/images/Sponsors/cne-logo.jpg' class='sponsor-image' alt='CNE Cernavodă'>
-        
         <img src='../../assets/images/Sponsors/dcnews-.png' class='sponsor-image' alt='DC News'>
         <img src='../../assets/images/Sponsors/dunarea-tv.jpg' class='sponsor-image' alt='Dunărea TV'>
         <img src='../../assets/images/Sponsors/elcomex-logo.jpg' class='sponsor-image' alt='Elcomex'>
@@ -21,16 +20,18 @@
         <img src='../../assets/images/Sponsors/new_sigla-P45-01-GIFF.jpg' class='sponsor-image' alt='Paralela 45'>
         <img src='../../assets/images/Sponsors/NISAN.jpg' class='sponsor-image' alt='NISAN'>
         <img src='../../assets/images/Sponsors/nuclearelectrica-logo.jpg' class='sponsor-image' alt='Societatea Nuclearelectrica SA'>
-
         <img src='../../assets/images/Sponsors/Paradis-Tours-1.png' class='sponsor-image' alt='Paradis'>
         <img src='../../assets/images/Sponsors/politia-frontiera.jpg' class='sponsor-image' alt='Poliția de Frontieră'>
         <img src='../../assets/images/Sponsors/romsilva.jpg' class='sponsor-image' alt='Direcția Silvică - Constanța'>
         <img src='../../assets/images/Sponsors/RRA.png' class='sponsor-image' alt='Radio RomâniaActualități'>
         <img src='../../assets/images/Sponsors/ST.png' class='sponsor-image' alt='Știință și Tehnică'>
         <img src='../../assets/images/Sponsors/SteamaOrasului-Cernavoda.jpg' class='sponsor-image' alt='Primăria Cernavodă'>
-        <img class='sponsor-image' alt='Primăria Topalu'>
-        <img class='sponsor-image' alt='Travelomania'>
         <img src='../../assets/images/Sponsors/admin-ajax-nou.png' class='sponsor-image' alt='World Jiu-Jitsu Kobudo Organization'>
-
+        <div class='sponsor-no-img'>
+            <img class='sponsor-image' alt='Primăria Topalu'>
+        </div>
+        <div class='sponsor-no-img'> 
+            <img class='sponsor-image' alt='Travelomania'>
+        </div>
     </div>
 </div>
