--- a/src/app/courses/courses.page.html
+++ b/src/app/courses/courses.page.html
@@ -1,5 +1,62 @@
 <app-navbar></app-navbar>
 
 <ion-content>
+    <ion-grid id='material-card'>
+        <ion-row class='main-col'>
+                <ion-col size=2 *ngIf="!mobile && !tablet">
+                    <div class='year-selection-div'>
+                        <p class='year-selection active'>Cursuri 2020</p>
+                        <p class='year-selection'>Cursuri 2019</p>
+                        <p class='year-selection'>Cursuri 2018</p>
+                        <p class='year-selection'>Cursuri 2017</p>
+                        <p class='year-selection'>Toate Cursurile</p>
+                    </div>
+                </ion-col>
+                <ion-col justify-content-center>
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Știință</h2>
+                    <ion-row justify-content-center>
+                        <app-fancy-card
+                            [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
+                            [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Guy-Djoken.jpg'" [name]="'Guy Djoken'"
+                            [title]="'Președinte Centrul Pentru Pace Unesco'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Heather-e1561802488420.jpg'"
+                            [name]="'Heather Caton'" [title]="'Fondatoare World Genesis Foundation'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/florin-munteanu2-e1495287157899.jpg'"
+                            [name]="'Dr. Florin Munteanu'" [title]="'Președinte Centrul de Studii Complexe'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'">
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'">
+                        </app-fancy-card>
+                        
+                    </ion-row>
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Artă</h2>
+    
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Cultură</h2>
+    
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Sport</h2>
+                </ion-col>
+        </ion-row>
+    </ion-grid>
 
+
+    <app-footer></app-footer>
 </ion-content>
