--- a/src/app/forgot/forgot.page.html
+++ b/src/app/forgot/forgot.page.html
@@ -8,14 +8,9 @@
                     <ion-label position='floating'>E-mail</ion-label>
                     <ion-input></ion-input>
                 </ion-item>
-                <ion-item class='form-item'>
-                    <ion-label position='floating'>Parolă</ion-label>
-                    <ion-input type='password'></ion-input>
-                </ion-item>
-                <ion-button fill='outline' class='login-button'>Logare</ion-button>
-                <p id='forgot' (click)='navForgot()'>Ai uitat parola? <span id='click-here'>Click Aici</span></p>
-                <p>Sau</p>
-                <ion-button fill='outline' class='login-button' (click)='navRegistration()'>Înregistrare</ion-button>
+                <ion-button fill='outline' class='login-button'>Trimite</ion-button>
+                <p>Ai deja un cont?</p>
+                <ion-button fill='outline' class='login-button' (click)='navLogin()'>Logare</ion-button>
             </ion-col>
             <ion-row *ngIf='!mobile'>
                 <img class='svg-login' src='../../assets/illustrations/Group 2.svg' alt='login illustration'>
