--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -11,11 +11,15 @@
                 <ion-item class='form-item'>
                     <ion-label position='floating'>Parolă</ion-label>
                     <ion-input type='password'></ion-input>
+				</ion-item>
+				<ion-item class='form-item'>
+                    <ion-label position='floating'>Confirmare Parolă</ion-label>
+                    <ion-input type='password'></ion-input>
                 </ion-item>
-                <ion-button fill='outline' class='login-button'>Logare</ion-button>
+                <ion-button fill='outline' class='login-button'>Înregistrare</ion-button>
                 <p id='forgot' (click)='navForgot()'>Ai uitat parola? <span id='click-here'>Click Aici</span></p>
                 <p>Sau</p>
-                <ion-button fill='outline' class='login-button' (click)='navRegistration()'>Înregistrare</ion-button>
+                <ion-button fill='outline' class='login-button' (click)='navLogin()'>Logare</ion-button>
             </ion-col>
             <ion-row *ngIf='!mobile'>
                 <img class='svg-login' src='../../assets/illustrations/Group 2.svg' alt='login illustration'>
