--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,5 +1,26 @@
 <app-navbar></app-navbar>
 
 <ion-content>
+    <ion-grid id='material-card'>
+        <ion-row>
+            <ion-col id='form-col'>
+                <ion-item class='form-item'>
+                    <ion-label position='floating'>Adresa ta E-mail</ion-label>
+                    <ion-input></ion-input>
+                </ion-item>
+                <ion-item id='message' class='form-item'>
+                    <ion-label position='floating'>Mesajul</ion-label>
+                    <ion-textarea auto-grow minlength=50 maxlength=1000></ion-textarea>
+                </ion-item>
+                <ion-button fill='outline' class='login-button'>Trimitere</ion-button>
+                
+            </ion-col>
 
+            <ion-row *ngIf='!mobile'>
+                <img class='svg-login' src='../../assets/illustrations/Group 24.svg' alt='contact illustration'>
+            </ion-row>
+        </ion-row>
+    </ion-grid>
+
+    <app-footer></app-footer>
 </ion-content>
