--- a/src/app/instructors/instructors.page.scss
+++ b/src/app/instructors/instructors.page.scss
@@ -1,57 +1,47 @@
-#background{
-    background-color: #e6dede;
-    //padding:30px;
-    height: auto;
-    padding-bottom: 50px;
+.active {
+    border-right: 9px solid var(--ion-color-secondary);
+    margin-right: -7px;
+    transition: .2s;
+    font-size: 18px;
 }
-#card{
+
+ion-content {
+    --ion-background-color: #eeeeee;
+}
+
+#material-card {
     background-color: white;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
-    
+	border-radius: 10px;
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+	box-shadow: 380px;
+	left: 0;
+	margin: 0 auto 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+    right: 0;
+    padding-top: 60px;
+	width: 90%;
 }
 
-#main{
-    //background-color: rgb(122, 161, 117);
-    flex: 80%;
-    margin-bottom: 10%;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-}
-.id-card{
-    padding: 10px;
-    flex-basis: 30%;
+.section {
+    margin-bottom: 20px;
+    margin-left: 100px;
 }
 
-#timeline{
-    //position: sticky;
-    margin: 20px;
-    flex: 20%;
-    border-radius: 2px;
-    height: fit-content;
+.section-center {
+    text-align: center;
+    margin-left: 0px;
 }
 
-h4{
-    margin-top:5px;
-    margin-bottom: 5px;
-}
-.year{
-    border-right: none;
+.year-selection {
+    margin-left: 40px;
     cursor: pointer;
 }
-.year-active{
-    border-right: 5px solid rgb(40, 31, 177);
-    cursor: pointer;
+.year-selection:hover {
+    color:rgb(53, 53, 175);
 }
-.year:hover{
-    background-image: linear-gradient(to right, rgba(205, 208, 230, 0), rgb(204, 201, 250));
-}
-.year-active:hover{
-    background-image: linear-gradient(to right, rgba(205, 208, 230, 0), rgb(204, 201, 250));
+
+.year-selection-div {
+    border-right: 5px solid #707070;
 }
