Contact page adjustment

--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -2,8 +2,8 @@
 
 <ion-content>
     <ion-grid id='material-card'>
-        <ion-row  >
-            <ion-col class="message-col">
+        <ion-row >
+            <ion-col size-md="12" size-lg="5" class="message-col">
                 <ion-item color="transparent">
                     <ion-label position="floating">Subiect</ion-label>
                     <ion-input></ion-input>
@@ -18,13 +18,13 @@
                   </ion-item>
                   <ion-button fill='outline' class='message-btn'>Trimite</ion-button>
             </ion-col>
-            <ion-col>
+            <ion-col size-md="12" size-lg="7" class="contact-map-col">
                 <div class="contact-map">
                     <h1>Contacteaza-ne</h1>
                     <p>Echipa de organizare Atlantykron munceste din greu pentru a permite magiei sa se intample din nou.</p>
                     <p>Asigura-te ca ai citit Ghidul Participantului si Conditiile de Participare, precum si alte documente puse la dispozitie de organizatori, inainte de a adresa o intrebare. Iti multumim!</p>
                     <p>Vrei să ne trimiți un mesaj? Folosește pagina de Facebook sau trimite-ne un mail.</p>
-                    <ion-icon name="logo-facebook"></ion-icon>
+                    <ion-icon style="font-size: 50px;" name="logo-facebook"></ion-icon>
                     <app-map></app-map>
                 </div>
             </ion-col>
