--- a/src/app/sponsors-showcase/sponsors-showcase.component.html
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.html
@@ -27,11 +27,11 @@
         <img src='../../assets/images/Sponsors/ST.png' class='sponsor-image' alt='Știință și Tehnică'>
         <img src='../../assets/images/Sponsors/SteamaOrasului-Cernavoda.jpg' class='sponsor-image' alt='Primăria Cernavodă'>
         <img src='../../assets/images/Sponsors/admin-ajax-nou.png' class='sponsor-image' alt='World Jiu-Jitsu Kobudo Organization'>
-        <div class='sponsor-no-img'>
+        <!-- <div class='sponsor-no-img'>
             <img class='sponsor-image' alt='Primăria Topalu'>
         </div>
         <div class='sponsor-no-img'> 
             <img class='sponsor-image' alt='Travelomania'>
-        </div>
+        </div> -->
     </div>
 </div>
