--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<ion-header [attr.no-border]='router.url == "/home" ? true : null' [ngClass]='{"ion-header-padding": !mobile && router.url == "/home"}'>
+<ion-header [attr.no-border]='router.url == "/home" ? true : null' 
+    [ngClass]='{"ion-header-padding": !mobile && router.url == "/home", 
+    "ion-no-border": router.url == "/home"}'>
     <ion-toolbar [ngClass]='{"navbar-home": !mobile && router.url == "/home"}' scroll='false'>
         <ion-buttons slot="start" *ngIf='mobile'>
             <ion-menu-button [attr.color]="router.url == '/home' ? 'light' : 'dark'"></ion-menu-button>
