--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,11 @@
 <ion-content fullscreen id='home-page'>
+    <ion-item>
+            <ion-select [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
+                <ion-select-option value="ro">Română</ion-select-option>
+                <ion-select-option value="en">English</ion-select-option>
+            </ion-select>
+    </ion-item>
+    
     <app-navbar></app-navbar>
     <app-hero></app-hero>
     <div id='home-screen'>
